btn align fix

--- a/src/index.css
+++ b/src/index.css
@@ -79,7 +79,6 @@ code {
 }
 
 .close-button{
-  display: block;
   margin:10px 10px 10px 10px;
 }
 .close{
